deployments/zero/kustomize/zero-toyblc/base/deployment_patch.yaml
# Copyright 2020 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
# Use of this source code is governed by a MIT style
# license that can be found in the LICENSE file.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zero-toyblc # 资源名称
spec:
  template:
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - zero-toyblc
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - --config=/opt/zero/conf/zero-toyblc.yaml
        image: "ccr.ccs.tencentyun.com/superproj/zero-toyblc-amd64:v1.0.0"
        name: zero-toyblc
        ports:
        - containerPort: 5800058000
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            port: 58000
            path: /healthz
        readinessProbe:
          httpGet:
            port: 58000
            path: /healthz
        startupProbe:
          httpGet:
            port: 58000
            path: /healthz
        volumeMounts:
        - mountPath: /opt/zero/conf/zero-toyblc.yaml
          name: zero-toyblc
          subPath: zero-toyblc.yaml
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: zero-toyblc.yaml
            path: zero-toyblc.yaml
          name: zero-toyblc
        name: zero-toyblc
